2009-12-03  Gavin Barraclough  <barraclough@apple.com>

        Try and fix the Windows build.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:  Export a symbol that should be exported.

2009-12-03  Mark Rowe  <mrowe@apple.com>

        Try and fix the Mac build.

        * JavaScriptCore.exp:  Export a symbol that should be exported.

2009-12-03  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        REGRESSION(4.0.3-48777): Crash in JSC::ExecState::propertyNames() (Debug-only?)
        https://bugs.webkit.org/show_bug.cgi?id=32133

        Work around odd GCC-ism and correct the scopechain for use by
        calls made while a cachedcall is active on the callstack.

        * interpreter/CachedCall.h:
        (JSC::CachedCall::newCallFrame):
        * runtime/JSArray.cpp:
        (JSC::AVLTreeAbstractorForArrayCompare::compare_key_key):
        * runtime/StringPrototype.cpp:
        (JSC::stringProtoFuncReplace):

2009-12-03  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver "Brraaaaiiiinnnnnzzzzzzzz" Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=32136
        Add a rope representation to JSString.  Presently JSString always holds its data in UString form.
        Instead, allow the result of a string concatenation to be represented in a tree form - with a
        variable sized, reference-counted rope node retaining a set of UString::Reps (or other rope nopes).

        Strings must still currently be resolved down to a flat UString representation before being used,
        but by holding the string in a rope representation during construction we can avoid copying data
        until we know the final size of the string.

        ~2% progression on SunSpider (~25% on date-format-xparb, ~20% on string-validate-input).

        * JavaScriptCore.exp:

            - Update exports.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
